Remove hardcoded usernames and api urls

--- a/ordineo/src/core/route/states/profile/profile-state.html
+++ b/ordineo/src/core/route/states/profile/profile-state.html
@@ -2,8 +2,8 @@
   <div>
     <div layout="row" flex="grow" layout-align="center center">
       <h1 flex="80">MY PEOPLE INFO > MANAGE VIEWS</h1>
-      <linkedin flex="20"></linkedin>
+      <linkedin flex="20" username="{{profile.username}}"></linkedin>
     </div>
   </div>
-  <profile-about username="Nivek"></profile-about>
+  <profile-about username="{{profile.username}}"></profile-about>
 </div>
